Set up home.js file

--- a/src/template.html
+++ b/src/template.html
@@ -14,17 +14,6 @@
         <button type="button">About</button>
       </nav>
     </header>
-    <main id="container">
-      <p>
-        Experience the warmth and richness of Indian tradition, where each dish
-        tells a story of heritage, spices, and love. Welcome to Dhaba, where
-        food is not just a meal—it's a celebration.
-      </p>
-    </main>
-    <footer>
-      <p>
-        Contact us at: +91 (870) 123-4567 | Address: 123 Roll House, FoodZilla
-      </p>
-    </footer>
+    <main id="container"></main>
   </body>
 </html>
