changed html a bit

--- a/src/template.html
+++ b/src/template.html
@@ -3,17 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dhaba</title>
+    <title>Dhaba - Authentic Indian Cuisine</title>
   </head>
   <body>
     <header>
       <h1>Dhaba</h1>
       <nav>
-        <button type="button">Home</button>
-        <button type="button">Menu</button>
-        <button type="button">About</button>
+        <button id="homeBtn">Home</button>
+        <button id="aboutBtn">About</button>
+        <button id="menuBtn">Menu</button>
+        <button id="contactBtn">Contact</button>
       </nav>
     </header>
-    <main id="container"></main>
+    <div id="content"></div>
   </body>
 </html>
