restructed all files into individual directories based on extension

--- a/src/html/template.html
+++ b/src/html/template.html
@@ -8,7 +8,7 @@
   <body>
     <header>
       <h1>Dhaba</h1>
-      <nav>
+      <nav id="navbar">
         <button id="homeBtn">Home</button>
         <button id="aboutBtn">About</button>
         <button id="menuBtn">Menu</button>
