worked on menu tab

--- a/src/html/template.html
+++ b/src/html/template.html
@@ -10,7 +10,7 @@
       <h1>Dhaba</h1>
       <nav id="navbar">
         <button id="homeBtn">Home</button>
-        <button id="aboutBtn">About</button>
+        <button id="langBtn">Hindi</button>
         <button id="menuBtn">Menu</button>
         <button id="contactBtn">Contact</button>
       </nav>
